--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <script src="./leetcode/394.decode-string.js"></script>
+    <script src="./leetcode/linkUtils.js"></script> <!-- 链表 -->
+    <script src="./leetcode/234_palindrome-linked-list.js"></script>
 </body>
+
 </html>
